Version 1.0.0 -- 25 July 2007
------------------------------------------------------------------
8 August 2007
+ Fixed block load on edit

7 August 2007
+ Reduced size of lorum text.
+ Had several problems with editing pages. Should be fixed.

24 July 2007
+ Added created and updated dates to page listing
+ Added search to page listing
+ Fixed header display, tags allowed for headers moved to config file

23 July 2007
+ Changed permission names
+ Page title now appears after typing if included on template
+ Using edit image instead of button
+ Started documentation for creating page templates
+ Some style changes to templates

20 July 2007
+ Added key saving.
+ Added option to delete pages.

28 June 2007
+ Fixed install.sql
+ Copied javascript folder over
+ Created uninstall file

27 June 2007
+ Basic functionality in place. Can create, edit, and view. Little
  else working.
+ New page template added.

13 June 2007
+ Commited foundation