@@ -5,14 +5,14 @@
     <th>{TITLE_SORT} {TITLE_LABEL}</th>
     <th width="25%">{CREATE_DATE_SORT} {CREATED_LABEL}<br />
         {LAST_UPDATED_SORT} {UPDATED_LABEL}</th>
-    <th width="15%">{ACTION_LABEL}</th>
+    <th width="20%">{ACTION_LABEL}</th>
   </tr>
 <!-- BEGIN listrows -->
   <tr>
     <td>{ID}</td>
     <td>{TITLE}</td>
     <td>{CREATE_DATE}<br />{LAST_UPDATED}</td>
-    <td>{ACTION}</td>
+    <td class="smaller">{ACTION}</td>
   </tr>
 <!-- END listrows -->
 </table>
